# casmi

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
src/: CMakeLists.txt  macros.h
src/etc/: check_errors.py  shared_glue.py  test_runner.py
src/libcasmrt/: libcasmrt.tgz.gpg  rt.h
src/libinterpreter/: CMakeLists.txt  ast_dump_visitor.cpp  ast_dump_visitor.h  builtins.cpp  builtins.h  execution_context.cpp  execution_context.h  execution_visitor.cpp  execution_visitor.h  main.cpp  operators.cpp  operators.h  symbolic.cpp  symbolic.h  value.cpp  value.h
src/libmiddle/: CMakeLists.txt  function_cycle_visitor.cpp  function_cycle_visitor.h  typecheck_visitor.cpp  typecheck_visitor.h
src/libparse/: CMakeLists.txt  ast.cpp  ast.h  driver.cpp  driver.h  grammer.y  grammer.yy  lexer.l  lexer_helper.c  lexer_helper.cpp  lexer_helper.h  lexer_helpers.cpp  lexer_helpers.h  parser.h  symbols.cpp  symbols.h  typecheck_visitor.cpp  typecheck_visitor.h  types.cpp  types.h  visitor.cpp  visitor.h
src/librt/: rt.h
src/libsyntax/: CMakeLists.txt  ast.cpp  ast.h  ast_dump_visitor.cpp  ast_dump_visitor.h  driver.cpp  driver.h  grammer.yy  lexer.l  lexer_helpers.cpp  lexer_helpers.h  symbols.cpp  symbols.h  types.cpp  types.h  visitor.h
src/libutil/: CMakeLists.txt  exceptions.cpp  exceptions.h
src/parser/: CMakeLists.txt  grammer.y  lexer.l  main.c
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test_parser.c  test_parser.cpp  test_runner.py
tests/integration/annotation/: 1.casm  10.casm  11.casm  15.casm  19.casm  2.casm  20_c.casm  21_b.casm  21_c.casm  22.casm  22_a.casm  22_c.casm  23_a.casm  24.casm  24_a.casm  24_c.casm  25_c.casm  26_a.casm  26_b.casm  26_c.casm  27_b.casm  27_c.casm  28.casm  28_a.casm  28_b.casm  29.casm  29_a.casm  29_b.casm  3.casm  36.casm  38.casm  39.casm  4.casm  42.casm  44.casm  45.casm  46.casm  46_2.casm  47.casm  48.casm  (+19 more)
tests/integration/assure/: concrete.casm
tests/integration/basic/: call-direct.casm  call.casm  comma.casm  conflict1.casm  double_init2.casm  forall_seqblock.expected  forall_updates_are_in_parallel.casm  forall_updates_are_in_parallel_2.casm  impossible.casm  mod.casm  par-for1.casm  par-for2.casm  par-for3.casm  par3.casm  rule-param-list.casm  undef2.casm
tests/integration/builtin/: bool.casm  builtins.casm  die.casm  hex.casm  len-tuple.casm  len.casm  nth1.casm  shared-symbolic.casm  shared.casm
tests/integration/calc/: let.casm  numbers.casm
tests/integration/compile-fail/: definitions-function-defined-multiple-times.casm  definitions-rule-defined-multiple-times.casm
tests/integration/failures/: bug.casm
tests/integration/function/: cons.casm  controlled-initializer.casm  static-update.casm  static-wrong2.casm  static-wrong3.casm
tests/integration/if/: basic-if.casm  nested-if_EE.expected  nested-if_EI.expected  nested-if_IE.expected  nested-if_II.expected
tests/integration/push_pop/: complex.casm  pop.casm  push_pop_are_updates.casm
tests/integration/rule/: identifier1.casm  identifier3.casm  illegal-value.casm  non-existing-rule.casm  param-rules.casm  rule-call-without-params.casm  rule1.casm  rule3.casm  rule4.casm  rule6.casm  rules-calling-rules.casm
tests/integration/run-fail/: 38.casm  assert-eq-boolean-fail.casm  assert-eq-const-int-unequal.casm  assert-eq-int-fail.casm  assert-eq-list.casm  assert-eq-string.casm  assert-eq-undef-boolean.casm  assert-eq-undef-int.casm  assert-function-undef1.casm  assert-function-undef2.casm  assert-greater-int.casm  assert-less-int.casm  assert-lesseq-int.casm  assert-neq-boolean-fail.casm  assert-neq-int-fail.casm  assert-neq-list.casm  assert-neq-string.casm  assert-neq-undef.casm  assure-fail.casm  builtins-pop-from-existing-pop-binding.casm  builtins-pop-from-nonlist.casm  builtins-pop-into-existing-let-binding.casm  builtins-push-into-binding.casm  builtins-push-into-nonexisting-function.casm  builtins-use-builtin-name-as-function-identifier.casm  case-match-assertion-failed.casm  definitions-function-name-as-enum-element.casm  definitions-function-name-as-enum-name.casm  definitions-unknown-argument-types.casm  definitions-unknown-return-type.casm  diedie-with-string.casm  enum-eq-enum-name-with-attribute.casm  enum-eq-from-different-enums.casm  foo.dot  function-attributes-static-controlled.casm  function-attributes-static-static.casm  function-attributes-symbolic-symbolic.casm  function-initializers-missing-argument.casm  function-initializers-no-argument-expected.casm  function-initializers-type-of-argument-does-not-match-expected.casm  (+50 more)
tests/integration/run-pass/: assert-eq-int.casm  assert-eq-string.casm  assert-greater-int.casm  assert-greaterq-int.casm  assert-less-int.casm  assert-lesseq-int.casm  assert-neq-int.casm  assert-numeric-expressions.casm  assert-simple-eq-const-int.casm  assert-simple-numeric-expressions.casm  assure-concrete.casm  builtin-app-combinations-as-updates.casm  builtin-app-combinations-with-tail-and-cons.casm  builtin-asconversion.casm  builtin-cons-temp-lists-assert.casm  builtin-nth-list-and-binding-as-index.casm  builtin-pow-simple.casm  call-direct-no-args.casm  call-indirect-no-args.casm  call-indirect-test-params.casm  call-nested-calls-with-params.casm  call-nested-with-derived.casm  case-function-with-args-as-label.casm  dump-updates-ints.casm  dump-updates-ints.expected  dump-updates-lists.casm  dump-updates-lists.expected  dump-updates-undef.casm  dump-updates-undef.expected  enum-equals.casm  function-arg-is-function.casm  function-boolean-update.casm  function-boolean-update2.casm  function-enum-as-arg.casm  function-initializer-ordering.casm  function-int-arg-initializer.casm  function-int-initializer.casm  function-list-int-simple.casm  function-list-int-simple2.casm  function-lists-as-args.casm  (+20 more)
tests/integration/statements/: case.casm  forall.casm  forall.expected  forall2.expected  if.casm  iterate.casm  print.casm
tests/integration/subrange/: init_sr.casm  ok.casm
tests/integration/symbolic/: annotation.casm  annotation.expected  (+99 more)
tests/unit/: CMakeLists.txt
(+402 files in other folders)
